--- a/src/GSvar/SequencingRunWidget.ui
+++ b/src/GSvar/SequencingRunWidget.ui
@@ -169,7 +169,7 @@
              </size>
             </property>
             <attribute name="horizontalHeaderVisible">
-             <bool>false</bool>
+             <bool>true</bool>
             </attribute>
             <attribute name="verticalHeaderVisible">
              <bool>false</bool>
