--- a/src/GSvar/SequencingRunWidget.ui
+++ b/src/GSvar/SequencingRunWidget.ui
@@ -469,14 +469,30 @@
        <property name="spacing">
         <number>3</number>
        </property>
-       <item row="1" column="0" colspan="10">
-        <widget class="DBTableWidget" name="samples">
-         <property name="selectionBehavior">
-          <enum>QAbstractItemView::SelectRows</enum>
+       <item row="0" column="6">
+        <widget class="QCheckBox" name="show_lab_cols">
+         <property name="toolTip">
+          <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;Show lab-related columns (MIDs, input, operator).&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+         </property>
+         <property name="text">
+          <string>lab columns</string>
+         </property>
+         <property name="checked">
+          <bool>true</bool>
          </property>
         </widget>
        </item>
-       <item row="0" column="8">
+       <item row="0" column="5">
+        <widget class="QCheckBox" name="sort_by_ps_id">
+         <property name="toolTip">
+          <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;Sort samples in the order they were entered into the database.&lt;br/&gt;&lt;br/&gt;The default is to sort by processing system and sample name.&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+         </property>
+         <property name="text">
+          <string>sort in entry order</string>
+         </property>
+        </widget>
+       </item>
+       <item row="0" column="10">
         <widget class="QToolButton" name="plot_btn">
          <property name="toolTip">
           <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;Plot QC metric.&lt;br/&gt;Samples selected in the table below are highlighted in the plots.&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
@@ -493,23 +509,27 @@
          </property>
         </widget>
        </item>
-       <item row="0" column="6">
-        <widget class="QCheckBox" name="show_qc_cols">
-         <property name="toolTip">
-          <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;Show QC columns.&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+       <item row="0" column="3">
+        <spacer name="horizontalSpacer">
+         <property name="orientation">
+          <enum>Qt::Horizontal</enum>
          </property>
-         <property name="layoutDirection">
-          <enum>Qt::LeftToRight</enum>
+         <property name="sizeHint" stdset="0">
+          <size>
+           <width>5</width>
+           <height>5</height>
+          </size>
          </property>
-         <property name="text">
-          <string>QC columns</string>
-         </property>
-         <property name="checked">
-          <bool>true</bool>
+        </spacer>
+       </item>
+       <item row="1" column="0" colspan="12">
+        <widget class="DBTableWidget" name="samples">
+         <property name="selectionBehavior">
+          <enum>QAbstractItemView::SelectRows</enum>
          </property>
         </widget>
        </item>
-       <item row="0" column="7">
+       <item row="0" column="9">
         <spacer name="horizontalSpacer_3">
          <property name="orientation">
           <enum>Qt::Horizontal</enum>
@@ -525,19 +545,6 @@
          </property>
         </spacer>
        </item>
-       <item row="0" column="5">
-        <widget class="QCheckBox" name="show_lab_cols">
-         <property name="toolTip">
-          <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;Show lab-related columns (MIDs, input, operator).&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
-         </property>
-         <property name="text">
-          <string>lab columns</string>
-         </property>
-         <property name="checked">
-          <bool>true</bool>
-         </property>
-        </widget>
-       </item>
        <item row="0" column="0" colspan="3">
         <widget class="QLabel" name="sample_count">
          <property name="text">
@@ -545,26 +552,26 @@
          </property>
         </widget>
        </item>
-       <item row="0" column="3">
-        <spacer name="horizontalSpacer">
-         <property name="orientation">
-          <enum>Qt::Horizontal</enum>
-         </property>
-         <property name="sizeHint" stdset="0">
-          <size>
-           <width>5</width>
-           <height>5</height>
-          </size>
-         </property>
-        </spacer>
-       </item>
-       <item row="0" column="4">
-        <widget class="QCheckBox" name="sort_by_ps_id">
+       <item row="0" column="7">
+        <widget class="QCheckBox" name="show_qc_cols">
          <property name="toolTip">
-          <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;Sort samples in the order they were entered into the database.&lt;br/&gt;&lt;br/&gt;The default is to sort by processing system and sample name.&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+          <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;Show QC columns.&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+         </property>
+         <property name="layoutDirection">
+          <enum>Qt::LeftToRight</enum>
          </property>
          <property name="text">
-          <string>sort in entry order</string>
+          <string>QC columns</string>
+         </property>
+         <property name="checked">
+          <bool>true</bool>
+         </property>
+        </widget>
+       </item>
+       <item row="0" column="8">
+        <widget class="QCheckBox" name="show_sample_comment">
+         <property name="text">
+          <string>sample comment</string>
          </property>
         </widget>
        </item>
