GSvar: fixed missing table header in sequencing run tab

--- a/src/GSvar/SequencingRunWidget.ui
+++ b/src/GSvar/SequencingRunWidget.ui
@@ -183,7 +183,7 @@
              </size>
             </property>
             <attribute name="horizontalHeaderVisible">
-             <bool>false</bool>
+             <bool>true</bool>
             </attribute>
             <attribute name="verticalHeaderVisible">
              <bool>false</bool>
