--- a/src/GSvar/SequencingRunWidget.ui
+++ b/src/GSvar/SequencingRunWidget.ui
@@ -213,7 +213,7 @@
             <x>0</x>
             <y>0</y>
             <width>363</width>
-            <height>313</height>
+            <height>334</height>
            </rect>
           </property>
           <property name="autoFillBackground">
@@ -639,13 +639,30 @@
        <property name="spacing">
         <number>3</number>
        </property>
-       <item row="0" column="6">
-        <widget class="QCheckBox" name="show_lab_cols">
+       <item row="0" column="9">
+        <widget class="QCheckBox" name="show_sample_comment">
+         <property name="text">
+          <string>sample comment</string>
+         </property>
+        </widget>
+       </item>
+       <item row="1" column="0" colspan="13">
+        <widget class="DBTableWidget" name="samples">
+         <property name="selectionBehavior">
+          <enum>QAbstractItemView::SelectRows</enum>
+         </property>
+        </widget>
+       </item>
+       <item row="0" column="8">
+        <widget class="QCheckBox" name="show_qc_cols">
          <property name="toolTip">
-          <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;Show lab-related columns (MIDs, input, operator).&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+          <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;Show QC columns.&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+         </property>
+         <property name="layoutDirection">
+          <enum>Qt::LeftToRight</enum>
          </property>
          <property name="text">
-          <string>lab columns</string>
+          <string>QC columns</string>
          </property>
          <property name="checked">
           <bool>true</bool>
@@ -662,7 +679,7 @@
          </property>
         </widget>
        </item>
-       <item row="0" column="10">
+       <item row="0" column="11">
         <widget class="QToolButton" name="plot_btn">
          <property name="toolTip">
           <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;Plot QC metric.&lt;br/&gt;Samples selected in the table below are highlighted in the plots.&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
@@ -692,14 +709,40 @@
          </property>
         </spacer>
        </item>
-       <item row="1" column="0" colspan="12">
-        <widget class="DBTableWidget" name="samples">
-         <property name="selectionBehavior">
-          <enum>QAbstractItemView::SelectRows</enum>
+       <item row="0" column="0" colspan="3">
+        <widget class="QLabel" name="sample_count">
+         <property name="text">
+          <string>#samples, etc</string>
          </property>
         </widget>
        </item>
-       <item row="0" column="9">
+       <item row="0" column="6">
+        <widget class="QCheckBox" name="show_disease_cols">
+         <property name="toolTip">
+          <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;Show disease information columns.&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+         </property>
+         <property name="text">
+          <string>disease columns</string>
+         </property>
+         <property name="checked">
+          <bool>false</bool>
+         </property>
+        </widget>
+       </item>
+       <item row="0" column="7">
+        <widget class="QCheckBox" name="show_lab_cols">
+         <property name="toolTip">
+          <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;Show lab-related columns (MIDs, input, operator).&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+         </property>
+         <property name="text">
+          <string>lab columns</string>
+         </property>
+         <property name="checked">
+          <bool>true</bool>
+         </property>
+        </widget>
+       </item>
+       <item row="0" column="10">
         <spacer name="horizontalSpacer_3">
          <property name="orientation">
           <enum>Qt::Horizontal</enum>
@@ -714,36 +757,6 @@
           </size>
          </property>
         </spacer>
-       </item>
-       <item row="0" column="0" colspan="3">
-        <widget class="QLabel" name="sample_count">
-         <property name="text">
-          <string>#samples, etc</string>
-         </property>
-        </widget>
-       </item>
-       <item row="0" column="7">
-        <widget class="QCheckBox" name="show_qc_cols">
-         <property name="toolTip">
-          <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;Show QC columns.&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
-         </property>
-         <property name="layoutDirection">
-          <enum>Qt::LeftToRight</enum>
-         </property>
-         <property name="text">
-          <string>QC columns</string>
-         </property>
-         <property name="checked">
-          <bool>true</bool>
-         </property>
-        </widget>
-       </item>
-       <item row="0" column="8">
-        <widget class="QCheckBox" name="show_sample_comment">
-         <property name="text">
-          <string>sample comment</string>
-         </property>
-        </widget>
        </item>
       </layout>
      </widget>
